[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Romain MARCELIN <romain.marcelin2@etu.univ-lorraine.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
